log
Thu 20 Apr 2023 04:33:40 PM UTC: 
 tests:  1|8
total_score: 0/70
109b359
Thu 20 Apr 2023 04:59:06 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
0a0b976
Thu 20 Apr 2023 05:09:36 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
c690738
Thu 20 Apr 2023 05:10:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0b3f7d2
Thu 20 Apr 2023 05:29:08 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++----
 1 file changed, 31 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:19: error: the comparison will always evaluate as ‘true’ for the address of ‘searchTreeMap’ will never be NULL [-Werror=address]
   57 |   if(searchTreeMap!=NULL) return;
      |                   ^~
cc1: all warnings being treated as errors
Compilation failed
7a9eaa6
Thu 20 Apr 2023 05:29:58 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
66b48d2
Thu 20 Apr 2023 05:30:21 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
529e825
Thu 20 Apr 2023 05:30:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
351df1f
Thu 20 Apr 2023 05:32:35 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:83:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   83 |   return NULL;
      |          ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb574d8
Thu 20 Apr 2023 05:33:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
19cc952
Thu 20 Apr 2023 05:33:19 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
1110d60
Thu 20 Apr 2023 05:33:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
729584d
Thu 20 Apr 2023 05:34:38 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|6
total_score: 15/70
d1560ef
Thu 20 Apr 2023 05:37:42 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
53a55ca
Thu 20 Apr 2023 05:38:01 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
c1fa864
Thu 20 Apr 2023 05:42:57 PM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  11|6
total_score: 15/70
9b435b7
Thu 20 Apr 2023 05:43:14 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
0be36fb
Thu 20 Apr 2023 05:44:08 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:27: error: expected expression before ‘)’ token
   60 |         if(is_equal(tree, ))
      |                           ^
treemap.c:60:12: error: too few arguments to function ‘is_equal’
   60 |         if(is_equal(tree, ))
      |            ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
treemap.c:60:11: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   60 |         if(is_equal(tree, ))
      |           ^
cc1: all warnings being treated as errors
Compilation failed
d93e81d
Fri 21 Apr 2023 07:06:14 PM UTC: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  13|5
total_score: 25/70
f2a579c
